--- a/sites/all/themes/mukurtu_starter/less/content.less
+++ b/sites/all/themes/mukurtu_starter/less/content.less
@@ -60,6 +60,23 @@
   }
 }
 
+
+//// Communities Structure view
+.view-communities-structure {
+  .view-header {
+    margin-bottom: 20px;
+  }
+  .views-table {
+    caption {
+      float: left;
+    }
+    .communities-structure-protocol a {
+      padding-left: 2em;
+    }
+  }
+}
+
+
 //// Collections
 
 #edit-field-digital-heritage-items .field-label {
